@@ -1,6 +1,7 @@
 package leetcode.oo.dp.dfs;
 
 import java.util.ArrayList;
+import java.util.LinkedList;
 import java.util.List;
 
 //https://leetcode.com/problems/palindrome-partitioning/
@@ -8,36 +9,32 @@ final class PalindromePartition {
 
     List<List<String>> partition(final String word) {
         final List<List<String>> solution = new ArrayList<>();
-        this.dfs(0, solution, new ArrayList<>(), word);
+        this.dfs(word, solution, 0, new LinkedList<>());
         return solution;
     }
 
-    void dfs(final int index, final List<List<String>> solution, final List<String> current, final String word) {
+    private void dfs(final String word, final List<List<String>> solution, final int index, final LinkedList<String> current) {
         if (index >= word.length()) {
-            if (!current.isEmpty()) {
-                solution.add(new ArrayList<>(current));
-            }
+            solution.add(new ArrayList<>(current));
             return;
         }
-        for (int i = index; i < word.length(); i++) {
-            final String sub = word.substring(index, i + 1);
-            if (this.palindrom(sub)) {
+        for (int i = index; i <= word.length(); i++) {
+            final String sub = word.substring(index, i);
+            if (!sub.isEmpty() && this.palindrome(sub)) {
                 current.add(sub);
-                this.dfs(i + 1, solution, current, word);
-                current.remove(current.size() - 1);
+                this.dfs(word,solution,i,current);
+                current.removeLast();
             }
         }
     }
 
-    private boolean palindrom(final String sub) {
+    private boolean palindrome(final String sub) {
         int left = 0;
         int right = sub.length() - 1;
         while (left <= right) {
-            if (sub.charAt(left) != sub.charAt(right)) {
+            if (sub.charAt(left++) != sub.charAt(right--)) {
                 return false;
             }
-            left++;
-            right--;
         }
         return true;
     }
